<resources>
    <string name="hello">Choose one of the features below.</string>
    <string name="app_name">SeatUP</string>
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_mytables">My Tables</string>
    <string name="description_addtable">Add Table</string>
    <string name="description_mygoals">My Goals</string>
    <string name="description_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_mytables">My Tables</string>
    <string name="title_addtable">Add Table</string>
    <string name="title_mygoals">My Goals</string>
    <string name="title_settings">Settings</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="action_label_refresh">Refresh</string>
    <string name="action_label_search">Search</string>
    <string name="action_label_both">Both</string>
    <string name="action_label_text">Text</string>
    <string name="action_label_logo">Logo</string>
    <string name="action_label_up">Up</string>
    <string name="action_label_nav_tabs">Tabs</string>
    <string name="action_label_nav_drop_down">List</string>
    <string name="action_label_nav_label">Label</string>
    <string name="action_label_nav">Navigation Mode &amp;gt;</string>
    <string name="action_label_bak">Action Bar Background &amp;gt;</string>
    <string name="action_label_bak_none">None</string>
    <string name="action_label_bak_gradient">Gradient</string>
    <string name="action_label_bak_image">Image</string>
    <string name="table_1">Table #1</string>
    <string name="table_2">Table #2</string>
    <string name="table_3">Table #3</string>
    <string name="table_4">Table #4</string>
    <string name="table_5">Table #5</string>
    <string name="table_6">Table #6</string>
    <string name="table_7">Table #7</string>
    <string name="table_8">Table #8</string>
    <string name="table_9">Table #9</string>
    <string name="table_10">Table #10</string>
</resources>