<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com
    Derived from Google IO Schedule App, Copyright 2010 Google, Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            android:id="@+id/TitleBar"
            style="@style/TitleBarLogo"
            android:layout_width="0dip"
            android:layout_weight="30"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onClickSearch"
            android:src="@drawable/title_search" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="6dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_mytables"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_mytable_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_mytables" />

                <Button
                    android:id="@+id/home_btn_addtable"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_addtable_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_addtable" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/home_btn_mygoals"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_mygoals_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_mygoals" />

                <Button
                    android:id="@+id/home_btn_settings"
                    style="@style/HomeButton"
                    android:drawableTop="@drawable/home_settings_button"
                    android:onClick="onClickFeature"
                    android:text="@string/title_settings" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>